--- a/Gemini API Order - Example 1.ipynb
+++ b/Gemini API Order - Example 1.ipynb
@@ -82,7 +82,7 @@
     "        btc_price = float(response['ask'])\n",
     "        print(btc_price)\n",
     "    except exception as e:\n",
-    "        print('Error obtaining data')\n",
+    "        print(f'Error obtaining data: {e}')\n",
     "        \n",
     "    if btc_price >= 50000:\n",
     "        try:\n",
@@ -90,7 +90,7 @@
     "            eth_price = float(response['ask'])\n",
     "            print(eth_price)\n",
     "        except Exception as e:\n",
-    "            print('Error obtaining data')\n",
+    "            print(f'Error obtaining data: {e}')\n",
     "            \n",
     "        t = datetime.datetime.now()\n",
     "        payload_nonce =  str(int(time.mktime(t.timetuple())*1000))  \n",
@@ -114,7 +114,7 @@
     "            print(new_order)\n",
     "            \n",
     "        except Exception as e:\n",
-    "            print('Error placing order')\n",
+    "            print(f'Error placing order: {e}')\n",
     "            \n",
     "        print(new_order)\n",
     "\n",
@@ -138,7 +138,7 @@
     "                            headers=Auth(payload1)).json()\n",
     "            \n",
     "        except Exception as e:\n",
-    "            print('Error checking order')\n",
+    "            print(f'Error checking order: {e}')\n",
     "\n",
     "        if str(check['is_live']) == 'True':\n",
     "            print ('Order placed at {}'.format(pd.Timestamp.now()))\n",
