--- a/Gemini API Order - Example 2.ipynb
+++ b/Gemini API Order - Example 2.ipynb
@@ -70,7 +70,7 @@
     "        btc_old = float(response['ask'])\n",
     "        print(btc_old)\n",
     "    except exception as e:\n",
-    "        print('Error obtaining data')\n",
+    "        print(f'Error obtaining data: {e}')\n",
     "    \n",
     "    sleep(300)\n",
     "    \n",
@@ -79,7 +79,7 @@
     "        btc_new = float(response['ask'])\n",
     "        print(btc_new)\n",
     "    except exception as e:\n",
-    "        print('Error obtaining data')\n",
+    "        print(f'Error obtaining data: {e}')\n",
     "    \n",
     "    percent = ((btc_new - btc_old)*100) / btc_old\n",
     "        \n",
@@ -89,7 +89,7 @@
     "            eth_price = float(response['ask'])\n",
     "            print(eth_price)\n",
     "        except Exception as e:\n",
-    "            print('Error obtaining data')\n",
+    "            print(f'Error obtaining data: {e}')\n",
     "            \n",
     "        t = datetime.datetime.now()\n",
     "        payload_nonce =  str(int(time.mktime(t.timetuple())*1000))  \n",
@@ -113,7 +113,7 @@
     "            print(new_order)\n",
     "            \n",
     "        except Exception as e:\n",
-    "            print('Error placing order')\n",
+    "            print(f'Error placing order: {e}')\n",
     "            \n",
     "        print(new_order)\n",
     "\n",
@@ -137,7 +137,7 @@
     "                            headers=Auth(payload1)).json()\n",
     "            \n",
     "        except Exception as e:\n",
-    "            print('Error checking order')\n",
+    "            print(f'Error checking order: {e}')\n",
     "\n",
     "        if str(check['is_live']) == 'True':\n",
     "            print ('Order placed at {}'.format(pd.Timestamp.now()))\n",
